--- a/app/views/users/_bio.html.erb
+++ b/app/views/users/_bio.html.erb
@@ -1,3 +1,3 @@
-<div class="card mb-3 mx-3" style="max-width: 540px;">
-  <div><%= @user.bio %></div>
+<div class="card mb-3 mt-3" style="max-width: 540px;">
+  <div>Bio: Teacher <%= @user.bio %></div>
 </div>
